--- a/client/app.css
+++ b/client/app.css
@@ -16,7 +16,7 @@
 }
 
 .switch-field label {
-    background-color: #e4e4e4;
+    background-color: #917784;
     color: rgba(0, 0, 0, 0.5);
     font-size: 14px;
     line-height: 1;
@@ -33,7 +33,7 @@
 }
 
 .switch-field input:checked + label {
-    background-color: #a5dc86;
+    background-color: #917784;
     box-shadow: none;
 }
 
@@ -74,9 +74,9 @@ h2 {
 }
 
 .location{
-    font-family: "Roboto", sans-serif;
+    font-family:"Arial", Helvetica, sans-serif;
     outline: 0;
-    background: #f2f2f2;
+    background: #abbeae;
     width: 76%;
     border: 0;
     margin: 0 0 10px;
@@ -88,7 +88,7 @@ h2 {
 }
 
 .submit{
-    background: #a5dc86;
+    background: #abbeae;
     width: 76%;
     border: 0;
     margin: 25px 0 10px;
@@ -100,7 +100,7 @@ h2 {
 }
 
 .result{
-        background: #dcd686;
+        background: #a5cac6ec;
         width: 76%;
         border: 0;
         margin: 25px 0 10px;
@@ -115,11 +115,11 @@ h2 {
         background-repeat: no-repeat;
     background-size: auto;
     background-size: 100% 100%;
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(15px);
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(3px);
     position: fixed;
     width: 100%;
     height: 100%;
