--- a/client/app.css
+++ b/client/app.css
@@ -62,7 +62,7 @@ h2 {
 .area{
     font-family: "Roboto", sans-serif;
     outline: 0;
-    background: #f2f2f2;
+    background: #abbeae;
     width: 76%;
     border: 0;
     margin: 0 0 10px;
@@ -88,7 +88,7 @@ h2 {
 }
 
 .submit{
-    background: #abbeae;
+    background: #a5cac6ec;
     width: 76%;
     border: 0;
     margin: 25px 0 10px;
